# compilation-pascal

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
error_set/: 0_program_head.pas  1_const_decl.pas  2_var_decl.pas  3_compound__stmt.pas  4_expression.pas  5_typo_error.pas  6_function_error.pas  7_procedure_error.pas  8_multi_error.pas
error_test/: 0_Grammatical_structure_error.pas  1_Declaration_error.pas  2_Expression_error.pas  3_statement_error.pas
judge/: judge.py
open_set/: 00_main.c  01_var_defn2.pas  02_var_defn3.pas  03_arr_defn2.c  03_arr_defn2.pas  04_const_var_defn2.pas  05_const_var_defn3.pas  06_func_defn.c  07_var_defn_func.c  08_add2.c  08_add2.pas  09_addc.c  09_addc.pas  10_sub2.pas  11_subc.pas  12_mul.pas  13_mulc.pas  14_div.c  14_div.pas  15_divc.c  15_divc.pas  16_mod.c  16_mod.pas  17_rem.pas  19_if_test4.pas  20_if_test5.pas  23_op_priority1.pas  24_op_priority2.pas  25_op_priority3.pas  26_op_priority4.pas  27_op_priority5.pas  28_unary_op.c  28_unary_op.pas  29_unary_op2.c  29_unary_op2.pas  30_logi_assign.pas  31_comment1.pas  33_if_complex_expr.pas  34_short_circuit.pas  35_short_circuit3.c  (+43 more)
riscv-target/: CMakeLists.txt  a+b.s  gen_asm.py  hello.s  print_num.s
src/: main.cpp
src/ast/: ast.cpp  stmt.cpp  stmt.hpp  stmt_test.cpp  stmt_test.hpp  visitor.hpp
src/builder/: builder.cpp  builder.hpp
src/builder/c/: c_builder.cpp  c_builder.hpp
src/code_generator/: code_generator.cpp  code_generator.hpp
src/common/exception/: exception.hpp
src/common/log/: log.cpp  log.hpp
src/common/setting/: settings.cpp  settings.hpp
src/common/thpool/: thpool.cpp  thpool.hpp
src/ir/: ir.cpp  ir.hpp  ir_gen.cpp  ir_gen.hpp  visitor.hpp
src/opt/: const_expr.cpp  const_expr.hpp  opt.hpp
src/parser/: gen_parser.sh  lex_pascal.cpp  lex_pascal.hpp  lex_pascal.l  lexer.cpp  lexer.hpp  lexer.l  parser.cpp  parser.hpp  parser.y  yacc_pascal copy.y  yacc_pascal.cpp  yacc_pascal.hpp  yacc_pascal.y  yacc_pascal.y~  yacc_pascal_copy.y
src/semantic_analyzer/: semantic_analyzer.cpp  semantic_analyzer.hpp
src/token/: token.cpp  token.hpp
test/bison_test/: ASTPrettyPrinter.hpp  CMakeLists.txt  main.cpp  todo.y
test/ir_test/: CMakeLists.txt  main.cpp  run.sh  test.py
test/token_test/: CMakeLists.txt  lex_pascal.l  lex_pascal_use_for_bison.l  main.cpp
test_set/: 01_var_defn2  01_var_defn2.c  01_var_defn2.pas
test_set/01_var_defn2.dSYM/Contents/: Info.plist
test_set/01_var_defn2.dSYM/Contents/Resources/DWARF/: 01_var_defn2
test_set/01_var_defn2.dSYM/Contents/Resources/Relocations/aarch64/: 01_var_defn2.yml
